--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 <meta name="robots" content="noindex, nofollow">
-<title>Prywatne usługi</title>
+<title>Serviços privados</title>
 <meta content='https://i.postimg.cc/KcpssW0G/2450420397-827362699357447-3548609788164258443-nnn.png' property='og:image'/>
 <script src="https://cdn.smrt-content.com/assets/1004/js/jquery.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/device.min.js"></script>
@@ -20,23 +20,23 @@
 <div class="wrap">
 <div class="step-block">
 <div class="logo">
-<img src="https://i.imgur.com/sZdtUEq.png" alt="">
+<img src="" alt="">
 </div>
 <div class="step-item" style="display: block;">
 <div class="question-title ">
-Oferuję swoje usługi seksualne, tańce i masaże erotyczne w domu, chcesz zobaczyć mój katalog?.</div>
+Ofereço meus serviços sexuais, danças e massagens eróticas em casa, deseja ver meu catálogo?.</div>
 <div class="buttons-block">
 <div class="step-btn no-btn tr-next-button tr-b-option">
-Tak
+Sim
 </div>
 <div class="step-btn yes-btn tr-next-button tr-b-option">
-Nie
+Não
 </div>
 </div>
 </div>
 <div class="step-item thishide" style="display: none;">
 <div class="question-title ">
-¡OSTRZEŻENIE! Czy zgadzasz się szanować nagie kobiety, które zobaczysz poniżej? Jeśli kogoś znasz, nie mów mu i nie rozpowszechniaj plotek. </div>
+AVISO! Você concorda em respeitar as mulheres que vê a seguir? Se você conhece alguém, não conte nem espalhe boatos. </div>
 <p>
 <b style="color: red;">
 </b>
@@ -47,7 +47,7 @@ Nie
 </div>
 </div>
 <video autoplay muted loop id="VideoBg">
-<source src="https://cdn-bimi.akamaized.net/landings/268643/1641828300/images/1.mp4" type="video/mp4">
+<source src="https://video.twimg.com/ext_tw_video/1792926732841857024/pu/vid/avc1/720x1280/OUnFr4psry92vmTP.mp4" type="video/mp4" type="video/mp4">
 </video>
 <script type="text/javascript">
       /*<![CDATA[*/    (function(w){
