--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
-
 <!DOCTYPE html>
 <html lang="pt">
 <head>
-<script id="_wau1ca">var _wau = _wau || []; _wau.push(["dynamic", "cantante23", "1ca", "ffffffffffff", "small"]);</script><script async src="//waust.at/d.js"></script>
+<script id="_wau1ca">var _wau = _wau || []; _wau.push(["dynamic", "chimuelo", "1ca", "ffffffffffff", "small"]);</script><script async src="//waust.at/d.js"></script>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 <meta name="robots" content="noindex, nofollow">
-<title>Serviços exclusivos</title>
-<meta content='https://i.postimg.cc/XJDPyLTm/miniatura.jpg' property='og:image'/>
+<title>Serviço Discreto</title>
+<meta content='https://i.postimg.cc/9MzVrfCS/Screenshot-933.png' property='og:image'/>
 <script src="https://cdn.smrt-content.com/assets/1004/js/jquery.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/device.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/custom.js"></script>
@@ -21,12 +20,11 @@
 <div class="wrap">
 <div class="step-block">
 <div class="logo">
-<img src="" alt="">
+<img src="https://i.imgur.com/sZdtUEq.png" alt="">
 </div>
 <div class="step-item" style="display: block;">
 <div class="question-title ">
-Ofereço meus serviços sexuais, danças e massagens eróticas em casa, deseja ver meu catálogo?
-</div>
+Ofereço serviços sexuais, danças e massagens eróticas no seu domicílio. Gostaria de ver meu catálogo?</div>
 <div class="buttons-block">
 <div class="step-btn no-btn tr-next-button tr-b-option">
 Sim
@@ -38,18 +36,18 @@ Não
 </div>
 <div class="step-item thishide" style="display: none;">
 <div class="question-title ">
-AVISO! Você concorda em respeitar as mulheres que verá a seguir? Se você conhece alguém, não conte a ninguém e não espalhe boatos.</div>
+ATENÇÃO! Você concorda em respeitar as mulheres nuas que verá a seguir? Se conhecer alguém, não conte a ninguém e não espalhe rumores.</div>
 <p>
 <b style="color: red;">
 </b>
 </p>
 <div class="buttons-block">
-<a href="https://go-2-date.us/tds/ae?tdsId=s3419pos_r&tds_campaign=s3419pos&s1=ps&utm_source=int&utm_sub=opnfnl&affid=d1e5281c&subid={Chimu}&subid2={subid2}&clickid={clickid}" class="step-btn submit-btn tr-submit-button showmail">EU ACEITO
+<a href="https://go-2-date.us/tds/ae?tdsId=s6982pos_r&tds_campaign=s6982pos&s1=ps&utm_source=int&utm_sub=opnfnl&affid=d8a90aeb&subid={Chimuelo}&subid2={subid2}&clickid={clickid}" class="step-btn submit-btn tr-submit-button showmail">TENHO A INTENÇÃO DE SAIR
 </a>
 </div>
 </div>
 <video autoplay muted loop id="VideoBg">
-<source src="https://cdn-dimi.akamaized.net/landings/288193/1714145726/images/video-4.mp4" type="video/mp4">
+<source src="https://i.imgur.com/JuVdi4p.mp4" type="video/mp4">
 </video>
 <script type="text/javascript">
       /*<![CDATA[*/    (function(w){
